--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-calendar": "^4.2.1",
     "react-dom": "^18.0.0",
     "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.1",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.2",
